MF_tire_model class now reads TIR files and updates the values of coefficients.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(tire_model)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(tire_model main.cpp MF_tire_model.cpp MF_tire_model.h)
+add_executable(tire_model main.cpp MF_tire_model.cpp MF_tire_model.h import_TIR.h)
